--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ p {
 }
 .proyecto-container{
     height: 60px;
-    width: 50%;
+    width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -129,6 +129,12 @@ p {
 .btns,
 .img-proyecto {
     display: none;
+}
+
+@media only screen and (max-width: 820px) {
+    .proyecto-container{
+        width: 60%;
+    }
 }
 
 
